# opengl-bootstrap

./: CMakeLists.txt  README.md  fragShader.frag  tutorial01.cpp  vertShader.vert
common/: Init.h  Shader.h
include/common/: Init.h  Shader.h
src/: opengl-bootstrap.cpp
